<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="310dp"
    android:layout_height="500dp"
    android:layout_margin="6dp"
    >


<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <ImageView
        android:id="@+id/card_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/card_background"/>
    <ImageButton
        android:id="@+id/add_or_remove_card"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:layout_margin="5dp"
        android:src="@drawable/ic_add_card"/>
    <LinearLayout
        android:layout_alignTop="@id/card_background"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titulo_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"
            android:text="@string/ph_card_name"
            android:ellipsize="end"
            android:singleLine="true"
            />
        <ImageView
            android:id="@+id/card_figure"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/image_placeholder"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:text="@string/ph_attributes"
            />
        <TextView
            android:id="@+id/forca_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/ph_strength"
            />
        <TextView
            android:id="@+id/velocidade_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/ph_speed"
            />
        <TextView
            android:id="@+id/inteligencia_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/ph_knowlodge"
            />
        <TextView
            android:id="@+id/poder_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/ph_pwr"
            />
        <TextView
            android:id="@+id/vigor_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/ph_health"
            />
        <TextView
            android:id="@+id/combate_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Combate:"
            />

    </LinearLayout>
</RelativeLayout>
</androidx.cardview.widget.CardView>